job events ogen group, nullable patchups
